@@ -1,5 +1,7 @@
+# $if{Debug}
 tester-button.label=Open Test Suite…
 tester-button.accesskey=O
+# $endif{}
 
 mudim-note.label=Mudim is also turned on and may interfere with AVIM.
 mudim-button.label=Turn Off Mudim
