@@ -1,5 +1,7 @@
+# $if{Debug}
 tester-button.label=Abrir el Paquete de Pruebas…
 tester-button.accesskey=i
+# $endif{}
 
 mudim-note.label=Mudim también se prendió y puede afectar AVIM.
 mudim-button.label=Apagar Mudim
