@@ -1,5 +1,7 @@
+# $if{Debug}
 tester-button.label=Ouvrir la Suite de Test…
 tester-button.accesskey=S
+# $endif{}
 
 mudim-note.label=Mudim est aussi allumées et peuvent interférer avec AVIM.
 mudim-button.label=Éteindre Mudim
