@@ -1,5 +1,7 @@
+# $if{Debug}
 tester-button.label=Mở Trình Đo thử…
 tester-button.accesskey=o
+# $endif{}
 
 mudim-note.label=Mudim cũng được bật lên và có thể đụng đến AVIM.
 mudim-button.label=Tắt Mudim
