@@ -1,0 +1,43 @@
+<!ENTITY AVIM.label "AVIM">
+<!ENTITY avim-menu.label "越南文输入">
+<!ENTITY avim-menu.accesskey "V">
+
+<!-- Input method menu -->
+<!ENTITY avim-enabled.modifiers "accel alt"><!-- Ctrl+Alt on Windows; Cmd+Opt on Mac -->
+<!ENTITY avim-enabled.key "V">
+<!ENTITY avim-enabled.label "已启用">
+<!ENTITY avim-enabled.accesskey "E">
+<!ENTITY avim-enabled.description "启用&AVIM.label;以输入越南文">
+<!ENTITY avim-prev-method.modifiers "accel"><!-- Ctrl on Windows; Cmd on Mac -->
+<!ENTITY avim-prev-method.key ":">
+<!ENTITY avim-next-method.modifiers "accel"><!-- Ctrl on Windows; Cmd on Mac -->
+<!ENTITY avim-next-method.key ";">
+<!ENTITY avim-auto.label "自动">
+<!ENTITY avim-auto.accesskey "A">
+<!ENTITY avim-telex.label "Telex">
+<!ENTITY avim-telex.accesskey "T">
+<!ENTITY avim-vni.label "VNI">
+<!ENTITY avim-vni.accesskey "V">
+<!ENTITY avim-viqr.label "VIQR">
+<!ENTITY avim-viqr.accesskey "Q">
+<!ENTITY avim-viqr-star.label "VIQR*">
+<!ENTITY avim-viqr-star.accesskey "R">
+
+<!ENTITY avim-menu-prev-method.label "上一个输入法">
+<!ENTITY avim-menu-prev-method.accesskey "P">
+<!ENTITY avim-menu-next-method.label "下一个输入法">
+<!ENTITY avim-menu-next-method.accesskey "N">
+
+<!ENTITY avim-disabled.label "已停用">
+
+<!-- Options -->
+<!ENTITY avim-spell.modifiers "accel alt"><!-- Ctrl+Alt on Windows; Cmd+Opt on Mac -->
+<!ENTITY avim-spell.key "S">
+<!ENTITY avim-spell.label "坚持正确拼写法">
+<!ENTITY avim-spell.accesskey "S">
+<!ENTITY avim-spell.description "仅在遵循越南文拼写法标准的字词上摆放调号">
+<!ENTITY avim-oldaccents.modifiers "accel alt"><!-- Ctrl+Alt on Windows; Cmd+Opt on Mac -->
+<!ENTITY avim-oldaccents.key ";">
+<!ENTITY avim-oldaccents.label "旧式调号">
+<!ENTITY avim-oldaccents.accesskey "L">
+<!ENTITY avim-oldaccents.description "在复韵母的韵头元音上摆放调号">
