@@ -1,0 +1,8 @@
+# $if{Debug}
+tester-button.label=打开测试套…
+tester-button.accesskey=O
+# $endif{}
+
+mudim-note.label=Mudim现在开着，而也许会影响AVIM的作用。
+mudim-button.label=停用Mudim
+mudim-button.accesskey=U
