@@ -1,0 +1,8 @@
+# $if{Debug}
+tester-button.label=打開測試套…
+tester-button.accesskey=O
+# $endif{}
+
+mudim-note.label=Mudim現在開著，而也許會影響AVIM的作用。
+mudim-button.label=停用Mudim
+mudim-button.accesskey=U
